--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,139 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-RU">
 <head>
 	<meta charset="UTF-8">
 	<title>Выпускной проект - 1 </title>
+	<meta name="viewport" content ="width=1230">
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/styleshet-sprite.css" type="text/css" charset="utf-8" />
+	<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+
 </head>
 <body>
-	sdgdsvsdsdgsdgdssdgs
+	<div class="wrapper">
+		<header class="header">
+			<div class="container container-wide">
+				<div class="logo-and-button clearfix">
+					<div class="logo">
+						<img src="img/logo.png" alt="Лого Плакида">
+					</div>
+					<div class="social-button clearfix">
+						<a href="#" class="social social-vk social-first"></a>
+						<a href="#" class="social social-tw"></a>
+						<a href="#" class="social social-facebook"></a>
+						<a href="#" class="social social-gihtub"></a>
+					</div>
+
+				</div>
+			</div>
+		</header>
+		<main class="content clearfix">
+			<div class="container clearfix">
+				<aside class="sidebar">
+					<nav class="menu">
+						<ul class="null-ul">
+							<li class="menu-item menu-item-border-radius-top active-link">
+							<a href="index.html">Обо мне</a>
+							</li>
+							<li class="menu-item border-line">
+							<a href="myvork.html">Мои роботы</a>
+							</li>
+							<li class="menu-item menu-item-border-radius-bottom">
+							<a href="#">Связаться со мною</a>
+							</li>
+						</ul>	
+					</nav>
+					<div class="contacts">
+						<div class="contacts contacts-title menu-item-border-radius-top">Контакты</div>
+							<ul class="null-ul">
+								<li class="contacts-i contacts-item-1 ">
+									<a href="mailto:plakyda1@gmail.com">plakyda1@gmail.com</a>
+								</li>
+								<li class="contacts-i contacts-item-2">
+									<a href="tel:+380960940677">+380960940677</a>
+								</li>
+								<li class="contacts-i contacts-item-3 menu-item-border-radius-bottom">
+									<a href="skype:plakydos1">plakydos1</a>
+								</li>
+							</ul>
+					</div>
+				</aside>
+				<div class="wrap-section">
+					<section class="section clearfix">
+						<div class="section-title-first">	
+							<h1 class="h1">Основная информация</h1>
+						</div>
+						<div class="avatar">
+							<img class="image" src="../img/avatar.jpg" alt="Аватар">
+						</div>
+						<div class="information-first">
+							<ul class="null-ul">
+								<li class="information-item-first"><strong class="strong">Меня зовут:</strong> Плакида Виктор Игоревич</li>
+								<li class="information-item-first"><strong class="strong">Мой возраст:</strong> 20 лет</li>
+								<li class="information-item-first"><strong class="strong">Мой город:</strong> Винница, Украина</li>
+								<li class="information-item-first"><strong class="strong">Моя специализация:</strong> Учусь</li>
+									<div class="title-navyki clearfix"><strong class="strong">Ключевые навыки:</strong> </div>
+									<div class="wrap-navyki clearfix">
+										<span class="navyki">html</span>
+										<span class="navyki">css</span>
+										<span class="navyki">javascript</span>
+										<span class="navyki">gulp</span>
+										<span class="navyki">git</span>
+									</div>
+									
+								
+							</ul>
+						</div>
+					</section>
+					<section class="section clearfix">
+						<div class="section-title">
+							<h1 class="h1">Опыт работы</h1>
+						</div>
+						<div class="information">
+							<ul class="null-ul">
+								<li class="information-item">
+									<p class="danyi">"ИП Боровицкий - Прочичисчдавец дисков"</p>
+									<p class="danyi-date">Сентябрь 2005 - Август 2008</p>
+								</li>
+								<li class="information-item">
+									<p class="danyi">"ООО Системы безопасности" - Системный админстратор</p>
+									<p class="danyi-date">Июнь 2008 - Июль 2010</p>
+								</li>
+							</ul>
+						</div>
+					</section>
+					<section class="section clearfix">
+						<div class="section-title">
+							<h1 class="h1">Образование</h1>
+						</div>
+						<div class="information">
+							<ul class="null-ul">
+								<li class="information-item sl">
+									<p class="danyi">Незаконченное высшее. ВНАУ</p>
+									<p class= "danyi-date">Сентябрь 2012 - по настоящее время</p>
+								</li>
+								<li class="information-item list">
+									<p class="danyi">Курсы Loftschool.ru</p>
+									<p class="danyi-date">Январь 2016 - по настоящее время</p>
+								</li>
+							</ul>
+						</div>
+					</section>
+				</div>
+
+			</div>
+		</main>
+		<div class="empty"></div>
+	</div>
+	
+	<footer class="footer">
+
+		<div class="container clearfix vertical">
+			<a href="login.php" class="in in-log"></a>
+			© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его
+		</div>
+	</footer>
 	<script src= "bower/jquery/dist/jquery.js"></script>
 	<script src="js/main.js"></script>
 </body>
