--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,16 @@
 	<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
 
 </head>
+<!--[if lt IE 9]>
+   <script>
+      document.createElement('header');
+      document.createElement('nav');
+      document.createElement('section');
+      document.createElement('article');
+      document.createElement('aside');
+      document.createElement('footer');
+   </script>
+<![endif]-->
 <body>
 	<div class="wrapper">
 		<header class="header">
@@ -40,7 +50,7 @@
 							<a href="myvork.html">Мои роботы</a>
 							</li>
 							<li class="menu-item menu-item-border-radius-bottom">
-							<a href="#">Связаться со мною</a>
+							<a href="form.html">Связаться со мною</a>
 							</li>
 						</ul>	
 					</nav>
@@ -62,7 +72,7 @@
 				<div class="wrap-section">
 					<section class="section clearfix">
 						<div class="section-title-first">	
-							<h1 class="h1">Основная информация</h1>
+							<h1 class="h1 first-title">Основная информация</h1>
 						</div>
 						<div class="avatar">
 							<img class="image" src="../img/avatar.jpg" alt="Аватар">
@@ -88,7 +98,7 @@
 					</section>
 					<section class="section clearfix">
 						<div class="section-title">
-							<h1 class="h1">Опыт работы</h1>
+							<h1 class="h1 first-title">Опыт работы</h1>
 						</div>
 						<div class="information">
 							<ul class="null-ul">
@@ -105,7 +115,7 @@
 					</section>
 					<section class="section clearfix">
 						<div class="section-title">
-							<h1 class="h1">Образование</h1>
+							<h1 class="h1 first-title">Образование</h1>
 						</div>
 						<div class="information">
 							<ul class="null-ul">
