--- a/app/myvork.html
+++ b/app/myvork.html
@@ -8,8 +8,20 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/styleshet-sprite.css" type="text/css" charset="utf-8" />
 	<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+	<link rel="stylesheet" href="css/myvork.css" type="text/css" charset="utf-8" />
+!
 
 </head>
+<!--[if lt IE 9]>
+   <script>
+      document.createElement('header');
+      document.createElement('nav');
+      document.createElement('section');
+      document.createElement('article');
+      document.createElement('aside');
+      document.createElement('footer');
+   </script>
+<![endif]-->
 <body>
 	<div class="wrapper">
 		<header class="header">
@@ -37,10 +49,10 @@
 							<a href="index.html">Обо мне</a>
 							</li>
 							<li class="menu-item border-line active-link">
-							<a href="#">Мои роботы</a>
+							<a href="myvork.html">Мои роботы</a>
 							</li>
 							<li class="menu-item menu-item-border-radius-bottom">
-							<a href="#">Связаться со мною</a>
+							<a href="form.html">Связаться со мною</a>
 							</li>
 						</ul>	
 					</nav>
@@ -62,17 +74,93 @@
 				<div class="wrap-section">
 					<section class="section clearfix">
 						<div class="section-title">
-							<h1 class="h1">Мои работы</h1>
+							<h1 class="h1 first-title">Мои работы</h1>
 						</div>
 						<div class="wrap-myvork-list">
-							<div class="projects-item">
+							<a href="http://vinlogistics.in.ua/" class="projects-item" target="_blank">
 							  <div class="hover-img">
-							    <img src="http://loremflickr.com/320/240" alt="http://landingsloft.ru/" class="project-img">
+							    <img src="img/port1.png" alt="http://vinlogistics.in.ua/" class="project-img">
 							    <div class="zoom-wrapper">
-							      <a href="http://landingsloft.ru/" target="_blank" class="zoom-link">landingsloft.ru</a>
+							    	<span class="zoom-link">Vinlogistics</span>
 							    </div>
+							  </div>
+							  <div class="podpis-1">
+							  	vinlogistics.in.ua
+							  </div>
+							  <div class="podpis-2">
+							  	Сайт грузоперевозок
+							  </div>
+							</a>
+							<a href="http://katya-bozura.pe.hu" class="projects-item" target="_blank">
+							  <div class="hover-img">
+							    <img src="img/port2.png" alt="http://katya-bozura.pe.hu" class="project-img">
+							    <div class="zoom-wrapper">
+							    	<span class="zoom-link">Katya</span>
 							    </div>
-							</div>
+							  </div>
+							  	<div class="podpis-1">
+							  		katya-bozura.pe.hu
+							  	</div>
+							  <div class="podpis-2">
+							  	Адаптивный сайт на Вордпрес
+							  </div>
+							</a>
+							<a href="#" class="projects-item" target="_blank" >
+							  <div class="hover-img">
+							    <img src="img/port3.png" alt="Проект 3" class="project-img">
+							    <div class="zoom-wrapper">
+							    	<span class="zoom-link">Проект 3</span>
+							    </div>
+							  </div>
+							  <div class="podpis-1">
+							  	mysite.in.ua
+							  </div>
+							  <div class="podpis-2">
+							  	Описанине сайта
+							  </div>
+							</a>
+							<a href="#" class="projects-item" target="_blank" >
+							  <div class="hover-img">
+							    <img src="img/port3.png" alt="Проект 4" class="project-img">
+							    <div class="zoom-wrapper">
+							      <span class="zoom-link">Проект 4</span>
+							    </div>
+							  </div>
+							  <div class="podpis-1">
+							  	vinlogistics.in.ua
+							  </div>
+							  <div class="podpis-2">
+							  	Сайт грузоперевозок
+							  </div>
+							</a>
+							<a href="#" class="projects-item" target="_blank">
+							  <div class="hover-img">
+							    <img src="img/port5.png" alt="Проект 5" class="project-img">
+							    <div class="zoom-wrapper">
+							      <span class="zoom-link">Проект 5</span>
+							    </div>
+							  </div>
+							  <div class="podpis-1">
+							  	vinlogistics.in.ua
+							  </div>
+							  <div class="podpis-2">
+							  	Сайт грузоперевозок
+							  </div>
+							</a>
+							<a href="# "class="projects-item" target="_blank">
+							  <div class="hover-img">
+							    <img src="img/port5.png" alt="Проект 5" class="project-img">
+							    <div class="zoom-wrapper">
+							    	<span class="zoom-link">Проект 5</span>
+							    </div>
+							  </div>
+							  <div class="podpis-1">
+							  	vinlogistics.in.ua
+							  </div>
+							  <div class="podpis-2">
+							  	Сайт грузоперевозок
+							  </div>
+							</a>
 						</div>
 					</section>
 				</div>
