3-d page and all

--- a/app/form.html
+++ b/app/form.html
@@ -2,38 +2,51 @@
 <html lang="ru-RU">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Выпускной проект - 1 </title>
 	<meta name="viewport" content ="width=1230">
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/styleshet-sprite.css" type="text/css" charset="utf-8" />
-	<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
-	<link rel="stylesheet" href="css/myvork.css" type="text/css" charset="utf-8" />
-	<link rel="stylesheet" href="css/form.css" type="text/css" charset="utf-8" />
+	<link rel="stylesheet" href="css/styleshet-sprite.css" type="text/css"  />
+	<link rel="stylesheet" href="css/stylesheet.css" type="text/css"  />
+	<link rel="stylesheet" href="css/myvork.css" type="text/css"  />
+	<link rel="stylesheet" href="css/form.css" type="text/css"  />
+		<!-- Favicon -->
+	<link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+	<!-- end favicon -->
+	<!--[if lt IE 9]>
+    	<script src="bower/html5shiv/dist/html5shiv.js"></script>
+	<![endif]-->
 </head>
-<!--[if lt IE 9]>
-   <script>
-      document.createElement('header');
-      document.createElement('nav');
-      document.createElement('section');
-      document.createElement('article');
-      document.createElement('aside');
-      document.createElement('footer');
-   </script>
-<![endif]-->
 <body>
 	<div class="wrapper">
 		<header class="header">
 			<div class="container container-wide">
 				<div class="logo-and-button clearfix">
 					<div class="logo">
-						<img src="img/logo.png" alt="Лого Плакида">
+						<a href="index.html"><img src="img/logo.png" alt="Лого Плакида"></a>
 					</div>
 					<div class="social-button clearfix">
-						<a href="#" class="social social-vk social-first"></a>
-						<a href="#" class="social social-tw"></a>
-						<a href="#" class="social social-facebook"></a>
-						<a href="#" class="social social-gihtub"></a>
+						<a href="https://vk.com/plakyda" class="social social-vk social-first" target="_blank">Вконтакте</a>
+						<a href="https://twitter.com/plakyda_victor" class="social social-tw">Nвиттер</a>
+						<a href="https://facebook.com" class="social social-facebook">Facebook</a>
+						<a href="https://github.com/plakyda1" class="social social-gihtub">GitHub</a>
 					</div>
 
 				</div>
@@ -78,21 +91,25 @@
 						<form action="#" class="forma clearfix">
 							<div class="forma-name-email">
 								<label class="forma-text" for="forma-input-name">Имя</label>
-								<input type="text" id="forma-input name" class="forma-input name" placeholder="Как к вам обращаться">
+								<input type="text" id="forma-input-name" class="forma-input name" placeholder="Как к вам обращаться">
 							</div>
 							<div class="forma-name-email">
 								<label class="forma-text" for="forma-input-email">Email</label>
-								<input type="text" id="forma-input email" class="forma-input email" placeholder="Куда мне писать">
+								<input type="text" id="forma-input-email" class="forma-input email" placeholder="Куда мне писать">
 							</div>
 							<div class="forma-messege">
 								<label class="forma-text" for="forma-input-messege">Сообщение</label>
 								<textarea class="forma-input messege" id="forma-input-messege" placeholder="Кратко в чем суть"></textarea>
 							</div>
 							<div class="forma-captcha clearfix">
-								<label  class= "forma-text" for="forma-captcha" >Введите код, указанный на картинке</label>
+								<label  class= "forma-text captcha-label" for="forma-captcha" >Введите код, указанный на картинке</label>
 								<div class="captcha"></div>
 								<input type="text" id="forma-captcha" class="forma-input captcha-text" placeholder="Введите код">
 							</div>	
+							<div class="button-group clearfix">	
+								<input type="button" value="Отправить" class="button button-send">
+								<input type="reset" value="Очистить" class="button button-reset">
+							</div>
 						</form>
 					</section>
 				</div>
@@ -110,6 +127,7 @@
 		</div>
 	</footer>
 	<script src= "bower/jquery/dist/jquery.js"></script>
+	<script src= "bower/jquery-placeholder/jquery.placeholder.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
