byg myvork.html fixed

--- a/app/myvork.html
+++ b/app/myvork.html
@@ -162,6 +162,9 @@
 							<a href="#" class="projects-item" >
 							  <img src="img/add-ptoject.png" alt="Добавить проект">
 							</a>
+							<div class="projects-item">
+								
+							</div>
 						</div>
 					</section>
 				</div>
