--- a/app/myvork.html
+++ b/app/myvork.html
@@ -57,14 +57,14 @@
 				<aside class="sidebar">
 					<nav class="menu">
 						<ul class="null-ul">
-							<li class="menu-item menu-item-border-radius-top ">
-							<a href="index.html">Обо мне</a>
+							<li class="menu-item menu-item-border-radius-top active-link">
+							<a href="index.html" class="menu-item-a" >Обо мне</a>
 							</li>
-							<li class="menu-item border-line active-link">
-							<a href="myvork.html">Мои роботы</a>
+							<li class="menu-item border-line">
+								<a href="myvork.html" class="menu-item-a" >Мои роботы</a>
 							</li>
 							<li class="menu-item menu-item-border-radius-bottom">
-							<a href="form.html">Связаться со мною</a>
+							<a href="form.html" class="menu-item-a" >Связаться со мною</a>
 							</li>
 						</ul>	
 					</nav>
