bug fixed,add autoriz, px-to-%

--- a/app/myvork.html
+++ b/app/myvork.html
@@ -57,10 +57,10 @@
 				<aside class="sidebar">
 					<nav class="menu">
 						<ul class="null-ul">
-							<li class="menu-item menu-item-border-radius-top active-link">
+							<li class="menu-item menu-item-border-radius-top ">
 							<a href="index.html" class="menu-item-a" >Обо мне</a>
 							</li>
-							<li class="menu-item border-line">
+							<li class="menu-item border-line active-link">
 								<a href="myvork.html" class="menu-item-a" >Мои роботы</a>
 							</li>
 							<li class="menu-item menu-item-border-radius-bottom">
