--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/stylesheet.css" type="text/css"  />
 	<link rel="stylesheet" href="css/myvork.css" type="text/css"  />
 	<link rel="stylesheet" href="css/form.css" type="text/css"  />
+	<link rel="stylesheet" href="css/media.css" type="text/css"  />
 	<!-- Favicon -->
 	<link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,6 +40,7 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="container container-wide">
+				<div id="div">	</div>
 				<div class="logo-and-button clearfix">
 					<div class="logo">
 						<img src="img/logo.png" alt="Лого Плакида">
@@ -56,7 +58,7 @@
 		<main class="content clearfix">
 			<div class="container clearfix">
 				<aside class="sidebar">
-					<nav class="menu">
+					<nav class="menu" id="menu" >
 						<ul class="null-ul">
 							<li class="menu-item menu-item-border-radius-top active-link">
 							<a href="index.html" class="menu-item-a" >Обо мне</a>
@@ -96,10 +98,22 @@
 						</div>
 						<div class="information-first">
 							<ul class="null-ul">
-								<li class="information-item-first"><span class="strong">Меня зовут:</span> Плакида Виктор Игоревич</li>
-								<li class="information-item-first"><span class="strong">Мой возраст:</span> 20 лет</li>
-								<li class="information-item-first"><span class="strong">Мой город:</span> Винница, Украина</li>
-								<li class="information-item-first"><span class="strong">Моя специализация:</span> Учусь</li>
+								<li class="information-item-first clearfix">
+								<div class="strong">Меня зовут:</div> 
+								<div class="about">Плакида Виктор Игоревич</div>
+								</li>
+								<li class="information-item-first clearfix">
+								<div class="strong">Мой возраст:</div> 
+								<div class="about">20 лет</div>
+								</li>
+								<li class="information-item-first clearfix">
+								<div class="strong">Мой город:</div> 
+								<div class="about">Винница, Украина</div>
+								</li>
+								<li class="information-item-first clearfix">
+								<div class="strong">Моя специализация:</div> 
+								<div class="about">Учусь</div>
+								</li>
 							</ul>
 									<div class="title-navyki clearfix"><strong class="strong">Ключевые навыки:</strong> </div>
 									<ul class="wrap-navyki clearfix null-ul">
